# Thesis

./: .gitignore  README.md  control.sh  folder_structure.txt  structure.txt  test_commands.md
src/: ORB_SLAM3  simple_nav
src/ORB_SLAM3/: CMakeLists.txt  Mono  manifest.xml  orb_grid_setup.rviz
src/ORB_SLAM3/launch/: orbgrid.launch  orbgrid_OLD.launch
src/ORB_SLAM3/src/: ros_mono.cc
src/detection/AV-Robots-Distance_Detection-Mandap/: calibration_data.npz  calibration_params.npz  calibration_params_old.npz  get_degree.py  requirements.txt  stream.py
src/detection/AV-Robots-Distance_Detection-Mandap/best_ncnn_model/: metadata.yaml
src/simple_nav/: CMakeLists.txt  orbgrid_nav.rviz  package.xml
src/simple_nav/launch/: amaster_nav.launch  master_nav.launch  orbgrid_nav.launch  orbgrid_nav_OLD.launch  orbgrid_nav_real.launch
src/simple_nav/scripts/: astar_planner.py  obstacle_stop (copy).py  obstacle_stop.py  perception_node copy.py  perception_node.py  pose_simulator.py  pure_pursuit copy.py  waypoint_manager.py
src/simple_nav/scripts/scripts/: perception_node.py  pose_simulator.py
